Fixed z-index of editor windows

--- a/bin/style.less
+++ b/bin/style.less
@@ -2291,6 +2291,7 @@ input[type=checkbox] {
 	.heaps-scene {
 		outline: none !important;
 		#preview {
+			z-index: 3;
 			position: absolute;
 
 			width: 300px;
@@ -2303,6 +2304,7 @@ input[type=checkbox] {
 			bottom: 35px;
 		}
 		#status-bar {
+			z-index: 2;
 			position: absolute;
 
 			width: 84%;
